--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,62 @@
-* {
+@import url(http://fonts.googleapis.com/css?family=Lato);
+*,*:after,*:before{
+  box-sizing:border-box;
+}
+body{
+  position:relative;
+  margin:0;
+  padding:0;
+  height:100%;
+  background:#fdfdfd;
+  font-family: 'Lato', sans-serif;
+  font-size:14px;
+  font-weight:400;
+}
+img{
+  width:100%;
+  display:block;
+}
+.thumbnails-filter {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+#filter {
+    min-width: 150px;
+    border: 1px solid #DADADA;
+    background: #EAEAEA;
+    color: #7B7B7B;
+    padding:0.5em 1em;
+    font-size:17px;
+    margin:1em;
+}
+
+/* photos */
+.thumbnails{
+  display:block;
+  width:90%;
+  margin:20px auto;
+}
+.tumb {
+  position:relative;
+  display: inline-block;
+  width: 32.6%;
+  height: 150px;
+  overflow: hidden;
+  background: url(https://dl.dropboxusercontent.com/u/23834858/fotos/loader.gif) no-repeat center center rgba(255, 255, 255, 1);
+  padding: 0;
+  margin: 0.1em;
+  -webkit-transition:all 1s ease;
+  transition:all 1s ease;
+}
+.tumb img {
+  display: block;
   width: 100%;
   transform: scale(1);
   transition: transform 0.5s ease;
 }
-
 .tumb span{
   display:none;
   visibility:hidden;
@@ -13,6 +66,7 @@
   transform: scale(1.5);
   transition: transform 0.5s ease;
 }
+
 
 .thumbnails-preview {
   position: fixed;
@@ -35,7 +89,6 @@
   padding: 0;
   overflow: hidden;
 }
-
 .thumbnails-preview  .thumbnail-title {
   font-family: sans-serif;
   font-weight: 300;
