refactor(css): fixing img

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -36,16 +36,14 @@ img{
 /* photos */
 .thumbnails{
   display:block;
-  width:90%;
+  width:100%;
   margin:20px auto;
 }
 .tumb {
   position:relative;
-  display: inline-block;
-  width: 32.6%;
-  height: 150px;
+  display: block;
+  width: 100%;
   overflow: hidden;
-  background: url(https://dl.dropboxusercontent.com/u/23834858/fotos/loader.gif) no-repeat center center rgba(255, 255, 255, 1);
   padding: 0;
   margin: 0.1em;
   -webkit-transition:all 1s ease;
@@ -56,10 +54,6 @@ img{
   width: 100%;
   transform: scale(1);
   transition: transform 0.5s ease;
-}
-.tumb span{
-  display:none;
-  visibility:hidden;
 }
 
 .tumb:hover img {
@@ -73,10 +67,7 @@ img{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
   background: white;
-  opacity: 0;
-  visibility: hidden;
   -webkit-transition: all 0.8s ease;
           transition: all 0.8s ease;
 }
