--- a/css/_style.css
+++ b/css/_style.css
@@ -36,14 +36,19 @@ img {
   font-size: 17px;
   margin: 1em; }
 
+/* line 36, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+.scale {
+  height: 2em;
+  width: 30%; }
+
 /* photos */
-/* line 37, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 42, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .thumbnails {
   display: block;
   width: 100%;
   margin: 20px auto; }
 
-/* line 42, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 47, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .tumb {
   position: relative;
   display: block;
@@ -53,7 +58,7 @@ img {
   margin: 0.1em;
   transition: all 1s ease; }
 
-/* line 52, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 57, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .tumb img {
   display: block;
   width: 100%;
@@ -63,7 +68,7 @@ img {
   transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease; }
 
-/* line 59, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 64, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .tumb:hover img {
   -webkit-transform: scale(1.5);
       -ms-transform: scale(1.5);
@@ -71,7 +76,7 @@ img {
   transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease; }
 
-/* line 65, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 70, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .thumbnails-preview {
   position: fixed;
   top: 0;
@@ -80,7 +85,7 @@ img {
   background: white;
   transition: all 0.8s ease; }
 
-/* line 75, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 80, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .thumbnails-preview .thumbnail-content {
   display: block;
   width: 100%;
@@ -89,7 +94,7 @@ img {
   padding: 0;
   overflow: hidden; }
 
-/* line 83, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 88, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .thumbnails-preview .thumbnail-title {
   font-family: sans-serif;
   font-weight: 300;
@@ -100,7 +105,7 @@ img {
   margin-top: 2em;
   text-align: center; }
 
-/* line 93, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 98, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .thumbnails-preview .thumbnail-close {
   position: absolute;
   top: 0.2em;
@@ -112,11 +117,11 @@ img {
   color: #464646;
   text-decoration: none; }
 
-/* line 104, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 109, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .thumbnails-preview .thumbnail-inner .thumbnail-close:hover {
   color: #f55; }
 
-/* line 107, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 112, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .thumbnails-preview .thumbnail-content {
   display: block;
   margin: 0 auto;
@@ -125,61 +130,61 @@ img {
   padding: 0.5em;
   overflow: hidden; }
 
-/* line 115, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 120, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .show-thumbnail {
   opacity: 1;
   visibility: visible;
   transition: all 0.8s ease; }
 
-/* line 123, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 128, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .hidden-me {
   opacity: 0.1;
   transition: all 1s ease; }
 
-/* line 129, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 134, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .hidden-me-full {
   display: none; }
 
 @media screen and (min-width: 320px) {
-  /* line 135, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 140, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .tumb {
     width: 100%;
     height: auto; }
 
-  /* line 136, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 141, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   #filter {
     width: calc(100% - 2em); }
  }
 
 @media screen and (min-width: 480px) {
-  /* line 139, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 144, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .tumb {
     width: 100%;
     height: auto; }
 
-  /* line 140, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 145, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   #filter {
     width: calc(100% - 2em); }
  }
 
 @media screen and (min-width: 700px) {
-  /* line 143, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 148, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .tumb {
     width: calc(100% / 2 - 0.5em);
     height: 160px; }
 
-  /* line 144, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 149, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   #filter {
     width: 150px; }
  }
 
 @media screen and (min-width: 1024px) {
-  /* line 147, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 152, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .tumb {
     width: calc(100% / 4 - 0.5em);
     height: 130px; }
 
-  /* line 148, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 153, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   #filter {
     width: 150px; }
  }
