--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -53,14 +53,16 @@ width: 30%;
   margin: 0.1em;
   -webkit-transition:all 1s ease;
   transition:all 1s ease;
-}
-.tumb img {
+
+img {
   display: block;
   width: 100%;
   transform: scale(1);
   transition: transform 0.5s ease;
-}
+    }
 
+}
+    
 .tumb:hover img {
   transform: scale(1.5);
   transition: transform 0.5s ease;
@@ -75,17 +77,17 @@ width: 30%;
   background: white;
   -webkit-transition: all 0.8s ease;
           transition: all 0.8s ease;
-}
-
-.thumbnails-preview  .thumbnail-content {
-  display: block;
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  padding: 0;
-  overflow: hidden;
-}
-.thumbnails-preview  .thumbnail-title {
+    
+    .thumbnail-content {
+      display: block;
+      width: 100%;
+      height: 100%;
+      margin: 0 auto;
+      padding: 0;
+      overflow: hidden;
+    }
+    
+    .thumbnail-title {
   font-family: sans-serif;
   font-weight: 300;
   color: #777;
@@ -94,8 +96,9 @@ width: 30%;
   padding: 0;
   margin-top: 2em;
   text-align: center;
-}
-.thumbnails-preview  .thumbnail-close {
+    }
+    
+    .thumbnail-close {
   position: absolute;
   top: 0.2em;
   right: 0.2em;
@@ -105,18 +108,24 @@ width: 30%;
   font-family: serif;
   color: #464646;
   text-decoration: none;
-}
-.thumbnails-preview  .thumbnail-inner .thumbnail-close:hover {
-  color: #f55;
-}
-.thumbnails-preview .thumbnail-content{ 
+    }
+    
+    .thumbnail-content{ 
   display: block;
   margin: 0 auto;
   width: 100vw;
   max-height: 90vh;
    padding: 0.5em;
   overflow: hidden;
+    }
 }
+
+
+
+.thumbnails-preview  .thumbnail-inner .thumbnail-close:hover {
+  color: #f55;
+}
+
 .show-thumbnail {
   opacity: 1;
   visibility: visible;
