--- a/css/_style.css
+++ b/css/_style.css
@@ -6,27 +6,35 @@
 /* line 5, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 body {
   position: relative;
-  margin: 0;
   padding: 0;
-  height: 100%;
   background: #fdfdfd;
-  font-family: 'Lato', sans-serif;
-  font-size: 14px;
-  font-weight: 400; }
+  font-family: 'Lato', sans-serif; }
 
-/* line 15, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 12, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+header {
+  background-color: #14646d; }
+
+/* line 16, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+h1 {
+  margin: auto 50%;
+  width: 100%;
+  font-size: 2em;
+  padding: 2em;
+  color: #fff; }
+
+/* line 24, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 img {
   width: 100%;
   display: block; }
 
-/* line 19, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 28, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .thumbnails-filter {
   display: block;
   width: 100%;
   margin: 0 auto;
   text-align: center; }
 
-/* line 26, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 35, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 #filter {
   min-width: 150px;
   border: 1px solid #DADADA;
@@ -36,19 +44,19 @@ img {
   font-size: 17px;
   margin: 1em; }
 
-/* line 36, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 45, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .scale {
   height: 2em;
   width: 30%; }
 
 /* photos */
-/* line 42, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 51, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .thumbnails {
   display: block;
   width: 100%;
   margin: 20px auto; }
 
-/* line 47, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 56, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .tumb {
   position: relative;
   display: block;
@@ -57,7 +65,7 @@ img {
   padding: 0;
   margin: 0.1em;
   transition: all 1s ease; }
-  /* line 57, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 66, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .tumb img {
     display: block;
     width: 100%;
@@ -67,7 +75,7 @@ img {
     transition: -webkit-transform 0.5s ease;
     transition: transform 0.5s ease; }
 
-/* line 66, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 75, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .tumb:hover img {
   -webkit-transform: scale(1.5);
       -ms-transform: scale(1.5);
@@ -75,7 +83,7 @@ img {
   transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease; }
 
-/* line 72, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 81, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .thumbnails-preview {
   position: fixed;
   top: 0;
@@ -83,7 +91,7 @@ img {
   width: 100%;
   background: white;
   transition: all 0.8s ease; }
-  /* line 81, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 90, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .thumbnails-preview .thumbnail-content {
     display: block;
     width: 100%;
@@ -91,7 +99,7 @@ img {
     margin: 0 auto;
     padding: 0;
     overflow: hidden; }
-  /* line 90, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 99, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .thumbnails-preview .thumbnail-title {
     font-family: sans-serif;
     font-weight: 300;
@@ -101,7 +109,7 @@ img {
     padding: 0;
     margin-top: 2em;
     text-align: center; }
-  /* line 101, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 110, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .thumbnails-preview .thumbnail-close {
     position: absolute;
     top: 0.2em;
@@ -112,7 +120,7 @@ img {
     font-family: serif;
     color: #464646;
     text-decoration: none; }
-  /* line 113, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 122, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .thumbnails-preview .thumbnail-content {
     display: block;
     margin: 0 auto;
@@ -121,65 +129,65 @@ img {
     padding: 0.5em;
     overflow: hidden; }
 
-/* line 125, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 134, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .thumbnails-preview .thumbnail-inner .thumbnail-close:hover {
   color: #f55; }
 
-/* line 129, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 138, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .show-thumbnail {
   opacity: 1;
   visibility: visible;
   transition: all 0.8s ease; }
 
-/* line 137, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 146, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .hidden-me {
   opacity: 0.1;
   transition: all 1s ease; }
 
-/* line 143, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+/* line 152, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
 .hidden-me-full {
   display: none; }
 
 @media screen and (min-width: 320px) {
-  /* line 149, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 158, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .tumb {
     width: 100%;
     height: auto; }
 
-  /* line 150, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 159, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   #filter {
     width: calc(100% - 2em); }
  }
 
 @media screen and (min-width: 480px) {
-  /* line 153, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 162, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .tumb {
     width: 100%;
     height: auto; }
 
-  /* line 154, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 163, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   #filter {
     width: calc(100% - 2em); }
  }
 
 @media screen and (min-width: 700px) {
-  /* line 157, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 166, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .tumb {
     width: calc(100% / 2 - 0.5em);
     height: 160px; }
 
-  /* line 158, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 167, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   #filter {
     width: 150px; }
  }
 
 @media screen and (min-width: 1024px) {
-  /* line 161, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 170, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   .tumb {
     width: calc(100% / 4 - 0.5em);
     height: 130px; }
 
-  /* line 162, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
+  /* line 171, /Users/SebastianNadeau/Desktop/exercise-4-code-pen/scss/components/main */
   #filter {
     width: 150px; }
  }
