--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -51,13 +51,13 @@ width: 30%;
 
 /* photos */
 .thumbnails{
-  display:block;
+  display: block;
   width:100%;
   margin:20px auto;
 }
 .tumb {
   position:relative;
-  display: block;
+  display: inline-block;
   width: 100%;
   overflow: hidden;
   padding: 0;
@@ -66,7 +66,7 @@ width: 30%;
   transition:all 1s ease;
 
 img {
-  display: block;
+  display: inline-block;
   width: 100%;
   transform: scale(1);
   transition: transform 0.5s ease;
